fixed overlap

--- a/public/styles.css
+++ b/public/styles.css
@@ -8,6 +8,10 @@ body {
 	width: 100;
 }
 
+#header{
+	margin-bottom: 10px;
+}
+
 #header h1 {
 	margin-top: 0;
 	margin-bottom: 20px;
@@ -18,7 +22,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 80vh;
+	height: fit-content;
 }
 #board {
 	height: 36vw;
